@@ -2,12 +2,19 @@
 
 # make the package build on ubuntu and debian
 DIST = $(shell lsb_release -i -s)
+
+# Debian does not currently does multiarch so we disable it here
+ifeq ($(DIST),Debian)
+    --without-apt-multiarch-support
+endif
+
 CONFIGURE_FLAGS= --prefix=/usr \
 	      --mandir=\$${prefix}/share/man \
 	      --infodir=\$${prefix}/share/info \
 	      --localstatedir=/var/lib/synaptic \
 	      --sysconfdir=/etc \
-	      --with-pkg-hold
+	      --with-pkg-hold \
+	      $(MULTIARCH)
 
 %:
 	dh $@ --with autoreconf
