@@ -12,6 +12,9 @@ synaptic (0.75.5~exp6) UNRELEASEDexperimental; urgency=low
       and fix crash along the way (LP: #936677)
   * common/sections_trans.cc:
     - add "metapackages", "education", "introspection"
+  * debian/rules:
+    - do not build multiarch support in Debian to make it work on 
+      unstable that has no multiarch apt yet
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 08 Feb 2012 21:38:40 +0100
 
